@startuml class_s1
!pragma layout smetana
skinparam backgroundColor #FFFFFF
skinparam defaultFontName Arial
skinparam defaultFontSize 10
skinparam ClassBorderColor #1D4ED8
skinparam ClassBorderThickness 1.5
skinparam ClassHeaderBackgroundColor #2563EB
skinparam ClassHeaderFontColor #FFFFFF
skinparam ClassHeaderFontStyle bold
skinparam ClassBackgroundColor #EFF6FF
skinparam ClassFontColor #111827
skinparam ArrowColor #374151
skinparam ArrowThickness 1.5
skinparam TitleFontSize 13
skinparam TitleFontStyle bold

title Sprint 1 — Classes : Authentification

class User {
  + id : Guid
  + firstName : String
  + lastName : String
  + email : String
  + passwordHash : String
  + role : UserRole
  + tenantId : Guid?
  + garageId : Guid?
  + refreshToken : String?
  + refreshTokenExpiry : DateTime?
  + isActive : bool
  ..
  + RegisterCommand()
  + LoginCommand()
}

class Tenant {
  + id : Guid
  + name : String
  + slug : String
  + email : String
  + phone : String
  + isActive : bool
  ..
  + CreateTenantCommand()
}

class LoginResponse <<DTO>> {
  + success : bool
  + accessToken : String
  + refreshToken : String
  + expiresAt : DateTime
  + userId : Guid
  + role : String
  + firstName : String
}

enum UserRole {
  SuperAdmin
  AdminEntreprise
  ChefAtelier
  Mecanicien
  Client
}

User "N" --> "1" Tenant : appartient à
User ..> LoginResponse : <<produce>>
User ..> UserRole : <<use>>

@enduml

